<resources>

    <string name="app_name">EarthQuakes</string>
    <string name="lastest_time">Lastest Time</string>
    <string name="near_me">Near Me</string>
    <string name="lastest_earthquake">Lastest Earthquake</string>
    <string name="time_">Time 		:</string>
    <string name="order_by">Order By</string>
    <string name="location_">Location 	:</string>
    <string name="latitude">Latitude 	:</string>
    <string name="longitude">Longitude 	:</string>
    <string name="indensity">Indensity 	:</string>
    <string name="dept">Dept		:</string>
    <string name="connection_error_title">Opps!</string>
    <string name="connection_error_message">Check the network status!</string>
    <string name="order_by_location">Order by Location</string>
    <string name="order_by_time">order by time</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="username_">Username</string>
    <string name="password_">Password</string>
    <string name="are_you_new">are you new ? Click here for register</string>
    <string name="email_">E-Mail</string>
    <string name="signup_">Sign Up</string>
    <string name="err_empty">Cant be Empty!</string>
    <string name="err_usr_empty">Username/Password Cant be empty!</string>

</resources>