<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/time_list_vw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.5"
        android:text="@string/time_"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/location_list_vw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.4"
        android:text="@string/location_"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/indensity_list_vw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.1"
        android:text="@string/indensity"
        android:textSize="18sp" />

</LinearLayout>