<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/istanbul"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/userNameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_"
        android:inputType="textPersonName"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/PasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_"
        android:inputType="textPassword"
        android:textColorHint="#ffffff"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#25ffffff"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/login"
        android:textColor="#60FFFFFF" />

</LinearLayout>